--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:23.2.1'
 }
