--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,12 @@
             android:name=".activities.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fullscreen"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".activities.RegisterAccountActivity"
+            android:label="@string/title_activity_register_account" />
+        <activity android:name=".activities.SearchJobActivity"
+            android:label="@string/title_activity_search_job"></activity>
     </application>
 
 </manifest>
