enhance user repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.backendless:backendless:3.0.11'
 }
