--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,8 +34,13 @@
         <activity
             android:name=".activities.RegisterAccountActivity"
             android:label="@string/title_activity_register_account" />
-        <activity android:name=".activities.SearchJobActivity"
-            android:label="@string/title_activity_search_job"></activity>
+        <activity
+            android:name=".activities.SearchJobActivity"
+            android:label="@string/title_activity_search_job" />
+        <activity
+            android:name=".activities.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
