--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.backendless:backendless:3.0.11'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
