--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,36 +17,37 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".activities.LoginActivity"
-            android:label="@string/title_activity_login">
 
         </activity>
         <activity
+            android:name=".activities.LoginActivity"
+            android:label="@string/title_activity_login"></activity>
+        <activity
             android:name=".activities.RegisterAccountActivity"
-            android:label="@string/title_activity_register_account"></activity>
+            android:label="@string/title_activity_register_account" />
         <activity
             android:name=".activities.SearchJobActivity"
             android:label="@string/title_activity_search_job" />
         <activity
             android:name=".activities.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.ForgotPasswordActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".activities.PublishJobActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/title_activity_main">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.PublishJobActivity"
+            android:label="@string/title_activity_publish_job">
 
         </activity>
     </application>
