--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         </activity>
         <activity
             android:name=".activities.PublishJobActivity"
-            android:label="@string/title_activity_publish_job">
+            android:label="@string/title_activity_publish_job"
+            android:parentActivityName=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
