--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.makeramen:roundedimageview:2.2.1'
-    compile 'com.makeramen:roundedimageview:2.2.1'
 //    compile 'com.android.support:appcompat-v7:23.3.0'
 //    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:support-v4:23.0.1'
@@ -36,6 +35,9 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.balysv:material-ripple:1.0.2'
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.8@aar') {
+        transitive = true
+    }
+    compile('com.mikepenz:materialdrawer:5.2.2@aar') {
         transitive = true
     }
 }
