--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,12 +43,17 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/title_activity_main"></activity>
+            android:label="@string/title_activity_main" />
         <activity
             android:name=".activities.PublishJobActivity"
             android:label="@string/title_activity_publish_job"
-            android:parentActivityName=".activities.MainActivity"></activity>
-        <activity android:name=".activities.JobStatusActivity"></activity>
+            android:parentActivityName=".activities.MainActivity" />
+        <activity android:name=".activities.JobStatusActivity" />
+        <activity
+            android:name=".activities.JobDetailsActivity"
+            android:label="@string/title_activity_job_details"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
