--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,13 @@
     <application
         android:name=".applications.JobApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_home_white_24dp"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/MyTheme">
+        <activity android:name=".activities.SplashActivity"
+           >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activities.LoginActivity"
@@ -32,23 +30,23 @@
         <activity
             android:name=".activities.SearchJobActivity"
             android:label="@string/title_activity_search_job" />
-        <activity
-            android:name=".activities.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.ForgotPasswordActivity" />
-
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
-
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/title_activity_main" />
+            android:configChanges="orientation|screenSize"
+            android:label="@string/title_activity_main">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activities.PublishJobActivity"
             android:label="@string/title_activity_publish_job"
             android:parentActivityName=".activities.MainActivity" />
-        <activity android:name=".activities.JobStatusActivity"
+        <activity
+            android:name=".activities.JobStatusActivity"
             android:parentActivityName=".activities.MainActivity">
 
         </activity>
@@ -56,7 +54,11 @@
             android:name=".activities.JobDetailsActivity"
             android:label="@string/title_activity_job_details"
             android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppTheme"></activity>
+            ></activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
