--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyTheme">
-        <activity android:name=".activities.SplashActivity"
-           >
+        <activity android:name=".activities.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".activities.LoginActivity"
@@ -34,31 +37,23 @@
         <activity
             android:name=".activities.MainActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/title_activity_main">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="@string/title_activity_main"></activity>
         <activity
             android:name=".activities.PublishJobActivity"
             android:label="@string/title_activity_publish_job"
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.JobStatusActivity"
-            android:parentActivityName=".activities.MainActivity">
-
-        </activity>
+            android:parentActivityName=".activities.MainActivity"></activity>
         <activity
             android:name=".activities.JobDetailsActivity"
             android:label="@string/title_activity_job_details"
-            android:parentActivityName=".activities.MainActivity"
-            ></activity>
+            android:parentActivityName=".activities.MainActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
     </application>
 
 </manifest>
